[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/character/idle/idle11.png" type="Texture" id=1]
[ext_resource path="res://assets/character/idle/idle6.png" type="Texture" id=2]
[ext_resource path="res://assets/character/idle/idle8.png" type="Texture" id=3]
[ext_resource path="res://assets/character/idle/idle12.png" type="Texture" id=4]
[ext_resource path="res://assets/character/idle/idle4.png" type="Texture" id=5]
[ext_resource path="res://assets/character/idle/idle1.png" type="Texture" id=6]
[ext_resource path="res://assets/character/run/run1.png" type="Texture" id=7]
[ext_resource path="res://assets/character/idle/idle5.png" type="Texture" id=8]
[ext_resource path="res://assets/character/run/run2.png" type="Texture" id=9]
[ext_resource path="res://assets/character/idle/idle3.png" type="Texture" id=10]
[ext_resource path="res://assets/character/idle/idle2.png" type="Texture" id=11]
[ext_resource path="res://assets/character/idle/idle7.png" type="Texture" id=12]
[ext_resource path="res://assets/character/idle/idle9.png" type="Texture" id=13]
[ext_resource path="res://assets/character/idle/idle10.png" type="Texture" id=14]
[ext_resource path="res://assets/character/run/run7.png" type="Texture" id=15]
[ext_resource path="res://assets/character/jump/jump_1.png" type="Texture" id=16]
[ext_resource path="res://assets/character/run/run6.png" type="Texture" id=17]
[ext_resource path="res://assets/character/run/run5.png" type="Texture" id=18]
[ext_resource path="res://assets/character/jump/jump_4.png" type="Texture" id=19]
[ext_resource path="res://assets/character/jump/jump_3.png" type="Texture" id=20]
[ext_resource path="res://assets/character/run/run3.png" type="Texture" id=21]
[ext_resource path="res://assets/character/run/run4.png" type="Texture" id=22]
[ext_resource path="res://assets/character/run/run8.png" type="Texture" id=23]
[ext_resource path="res://assets/character/jump/jump_2.png" type="Texture" id=24]
[ext_resource path="res://scripts/player/jungle_guy.gd" type="Script" id=25]
[ext_resource path="res://scripts/player/camera.gd" type="Script" id=26]
[ext_resource path="res://scenes/management/sfx.tscn" type="PackedScene" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 23 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 15 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.733333, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:on_hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="JungleGuy" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 25 )
health = 5
walk_speed = 120
dash_speed = 300
gravity = 600
jump_speed = 225
idle_threshold = 3
attack_cooldown = 1.0
acceleration = 0.5
dash_length = 0.2
friction = 0.75
sfx = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 6
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[node name="SpellSpawner" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[node name="DashTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_top = 0
limit_bottom = 0
script = ExtResource( 26 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, 1 )
scale = Vector2( 0.7, 1.6 )

[connection signal="timeout" from="DashTimer" to="." method="on_dash_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="on_attack_timeout"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
